--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,48 @@
-<h1>Isaac Huffman</h1>
+<h1>Welcome to CSE Motors!</h1>
+<section id="intro-section">
+    <div>
+        <img id="car-image" src="images/vehicles/delorean.jpg" alt="Delorean">
+    </div>
+    <div class="overlay">
+        <h2 id="card-h2">DMC Delorean</h2>
+        <ul id="delorean-info">
+            <li>3 Cup Holders</li>
+            <li>Superman Doors</li>
+            <li>Fuzzy Dice!</li>
+        </ul>
+        <a class="own-link">Own Today</a>
+    </div>
+</section>
+<section id="info-grid">
+    <div id="delorean-reviews">
+        <h2 class="review-title">DMC Delorean Reviews</h2>
+        <ul class="review-list">
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+    </div>
+    <div id="upgrades">
+        <h2 class="upgrade-title">Delorean Upgrades</h2>
+        <div id="upgrade-grid">
+            <div>
+                <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                <a href=""><p>Flux Capacitor</p></a>
+            </div>
+            <div>
+                <img src="images/upgrades/flame.jpg" alt="Flame">
+                <a href=""><p>Flame Decals</p></a>
+            </div>
+            <div>
+                <img src="images/upgrades/bumper_sticker.jpg" alt="bumper sticker">
+                <a href=""><p>Bumper Stickers</p></a>
+            </div>
+            <div>
+                <img src="images/upgrades/hub-cap.jpg" alt="hub cap">
+                <a href=""><p>Hub Caps</p></a>
+            </div>
+        </div>
+    </div>
+</section>
