--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,10 +29,14 @@
 #nav-list{
   list-style-type: none;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   background-color: black;
-  color: white;
   text-align: center;
+}
+
+#nav-list li a{
+  text-decoration: none;
+  color: white;
 }
 
 
