--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <% const d = new Date()
 let year = d.getFullYear() %>
 <footer>
+  <a href="./throwError">Cause a 500 Error Intentionally</a>
   <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
 </footer>
