--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -222,6 +222,85 @@ footer p {
   }
 }
 
+.form-container {
+  background: #fff;
+  padding: 20px 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 400px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-size: 20px;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #444;
+}
+input {
+  padding: 10px;
+  font-size: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+input:focus {
+  border-color: #007BFF;
+}
+
+.login-btn {
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #007BFF;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #0056b3;
+}
+
+/* Signup text styling */
+.signup-text {
+  text-align: center;
+  font-size: 16px;
+}
+
+.signup-link {
+  color: #007BFF;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.signup-link:hover {
+  color: #0056b3;
+}
+
+input:invalid {
+  border-color: #FF6347;
+}
+
+input:invalid:focus {
+  border-color: #FF4500;
+}
 
 @media screen and (min-width: 950px) {
   #delorean-info li{
