--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
+<%- messages() %>
 <section id="intro-section">
     <div>
         <img id="car-image" src="images/vehicles/delorean.jpg" alt="Delorean">
