made the data validation and password hashing

--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -16,15 +16,15 @@
           <% } %>
       <div class="form-group">
         <label for="first-name">First Name</label>
-        <input type="text" id="first-name" name="account_firstname" required placeholder="Enter your first name">
+        <input type="text" id="first-name" name="account_firstname" required placeholder="Enter your first name" value="<%= locals.account_firstname %>">
       </div>
       <div class="form-group">
         <label for="last-name">Last Name</label>
-        <input type="text" id="last-name" name="account_lastname" required placeholder="Enter your last name">
+        <input type="text" id="last-name" name="account_lastname" required placeholder="Enter your last name" value="<%= locals.account_lastname %>">
       </div>
       <div class="form-group">
         <label for="email">Email Address</label>
-        <input type="email" id="email" name="account_email" required placeholder="Enter your email">
+        <input type="email" id="email" name="account_email" required placeholder="Enter your email" value="<%= locals.account_email %>">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
