--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -5,12 +5,19 @@
 } %>
 
 <%- messages() %>
+<% if (errors) { %>
+    <ul class="notice">
+   <% errors.array().forEach(error => { %>
+     <li><%= error.msg %></li>
+  <%  }) %>
+   </ul>
+  <% } %>
 
 <div class="form-container">
   <form action="/account/login" method="post" class="login-form">
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" name="account_email" required placeholder="Enter your email">
+      <input type="email" id="email" name="account_email" required placeholder="Enter your email" value="<%= locals.account_email %>">
     </div>
     <div class="form-group">
       <label for="password">Password</label>
