made sure links worked

--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -15,10 +15,10 @@
 <% } %>
 
 <div class="form-container">
-    <form action="./add-classification" method="POST" class="classification-form">
+    <form action="/inv/add-classification" method="POST" class="classification-form">
       <div class="form-group">
         <label for="classification">Classification Name</label>
-        <span>You must only included Alphabetic characters, no spaces allowed</span>
+        <span>You must only include Alphabetic characters, no spaces allowed</span>
         <input 
           type="text" 
           id="classification" 
