--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -14,7 +14,7 @@
 <% } %>
 
 <div class="form-container">
-    <form action="./add-inventory" method="POST" class="vehicle-form">
+    <form action="/inv/add-inventory" method="POST" class="vehicle-form">
 
       <!-- Classification (Select Dropdown) -->
       <div class="form-group">
