--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -8,6 +8,6 @@
 
 
 <ul class="management-ul">
-    <li><a href="./add-classification">Add a new classification</a></li>
-    <li><a href="./add-inventory">Add a new vehicle</a></li>
+    <li><a href="/inv/add-classification">Add a new classification</a></li>
+    <li><a href="/inv/add-inventory">Add a new vehicle</a></li>
 </ul>
