--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -11,3 +11,14 @@
     <li><a href="/inv/add-classification">Add a new classification</a></li>
     <li><a href="/inv/add-inventory">Add a new vehicle</a></li>
 </ul>
+
+<h2>Manage Inventory</h2>
+<p>Select a classification from the list to see the items belonging to the classification</p>
+
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="../../js/inventory.js"></script>
