--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,14 @@
   right: .3rem;
 }
 
+#manage-account-link{
+  font-size: .7rem;
+  text-decoration: none;
+  color: black;
+  position: absolute;
+  top: .3rem;
+  right: 3rem;
+}
 
 #nav-list{
   list-style-type: none;
@@ -205,6 +213,16 @@ footer p {
     top: .5rem;
     right: .5rem;
   }
+
+  #manage-account-link{
+    font-size: 1rem;
+    text-decoration: none;
+    color: black;
+    position: absolute;
+    top: .5rem;
+    right: 4.2rem;
+  }
+
   .own-link{
     margin: 0 auto;
     padding: 5px;
@@ -361,6 +379,89 @@ input:invalid:focus, select:invalid:focus, textarea:invalid:focus {
   text-decoration: underline;
 }
 
+/* Management View Styles */
+#account-management-view {
+  font-family: Arial, sans-serif;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Greeting Section */
+#greeting {
+  color: #333;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#account-info-header {
+  font-size: 1.5rem;
+  color: #555;
+  margin-bottom: 15px;
+}
+
+/* Account Information Section */
+#account-info {
+  background-color: #fff;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.account-detail {
+  font-size: 1.2rem;
+  color: #333;
+  margin: 5px 0;
+}
+
+/* Update Account Link */
+#update-link a {
+  display: inline-block;
+  text-decoration: none;
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  transition: background-color 0.3s ease;
+}
+
+#update-link a:hover {
+  background-color: #0056b3;
+}
+
+/* Inventory Management Section */
+#inventory-management {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: left;
+}
+
+#inventory-management h3{
+  margin-bottom: 20px;
+  font-size: 1.7rem;
+}
+
+#inventory-link {
+  text-decoration: none;
+  color: #fff;
+  background-color: #28a745;
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  transition: background-color 0.3s ease;
+}
+
+#inventory-link:hover {
+  background-color: #1e7e34;
+}
+
 @media screen and (min-width: 950px) {
   #delorean-info li{
     font-size: 2.5rem;
@@ -402,10 +503,17 @@ input:invalid:focus, select:invalid:focus, textarea:invalid:focus {
   }
 
   .account-link{
-    font-size: 1rem;
+    font-size: 1.5rem;
     position: absolute;
     top: .5rem;
     right: .5rem;
+  }
+
+  #manage-account-link{
+    font-size: 1.5rem;
+    position: absolute;
+    top: .5rem;
+    right: 6.5rem;
   }
   .own-link{
     margin: 0 auto;
