--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,13 @@
 <header id="top-header">
-    <span class="siteName">
-      <a class="title-link" href="/" title="Return to home page">CSE Motors</a>
-    </span>
-    <div id="tools">
+  <span class="siteName">
+    <a class="title-link" href="/" title="Return to home page">CSE Motors</a>
+  </span>
+  <div id="tools">
+    <% if (locals.loggedin) { %>
+      <a class="account-link" id="manage-account-link" title="Click to log out" href="/account/">Manage Account</a>
+      <a class="account-link" title="Click to log out" href="/account/logout">Log Out</a>
+    <% } else { %>
       <a class="account-link" title="Click to log in" href="/account/login">My Account</a>
-    </div>
+    <% } %>
+  </div>
 </header>
