--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -41,4 +41,13 @@
     </div>
   <% } %>
 
+
+  <div id="message-management">
+    <h3>Message Management</h3>
+    <p>You currently have <%- message_count %> unread messages</p>
+    <p>
+      View your messages in your <a href="/messages" id="inbox-link">Inbox</a>
+    </p>
+  </div>
+
 </div>
